# web

./: Cargo.toml  Rocket.toml
.github/workflows/: rust.yml  secret_scan.yml
src/: access_fairing.rs  database.rs  main.rs  security.rs  views.rs
static/assets/css/: search.css
static/css/: custom.css  no_nav.css
static/js/: pop_up.js
templates/: base.html.tera  blog.html.tera  blog_history.html.tera  index.html.tera  register.html.tera  register_complete.html.tera  search.html.tera
