[package]
name = "seif-web"
version = "0.1.1"
authors = ["solanav <solanav@qq.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mysql = "*"
rocket-client-addr = "0.4.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "serve"]
